<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#333333"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/etInfluencerName"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/influencerName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"

        android:ems="10"
        android:hint="@string/influencerCategory"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="numberSigned"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInfluencerName" />

    <EditText
        android:id="@+id/etInfluencerUsername"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/influencerUsername"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategory" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInfluencerUsername" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:text="@string/addInfluencer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>